# site-04yxuan

./: pyproject.toml  server.py
config/: content.htm  content_backup.htm
content/: About.html  Brython.html  HW.html  NX.html  Onshape.html  Solvespace.html  hw10.html  index.html  sitemap.html  tipuesearch_content.js  w10.html  w11.html  w13.html  w14.html  w16.html  w6.html
downloads/: modified-image.jfif  nxw14-01.7z  nxw14-01.prt  nxw14-02.7z  nxw14-03.7z  nxw14-04.7z  w14-01.7z  w14-01.slvs  w14-02.7z  w14-02.slvs  w14-03.7z  w14-03.slvs  w14-04.7z  w14-04.slvs
